--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
     </head>
     <body>
-        <div class="inputs">
+        <div class="inputs" style="display: none;">
             <h3 id="head1">  Give the inputs for the pitch</h3>
             <div>
                 <label>Release Height = </label><input type="number" id="height" name="height" value="4.91"/>
